--- a/env.yaml
+++ b/env.yaml
@@ -20,6 +20,21 @@ development:
   PORT: 5000
   # In development it can be useful to get the error stack.
   EMIT_STACK_TRACE: true
+  DB: it-maps-db-dev
+  GEOLOCATION:
+    GOOGLE_MAPS_API_KEY: AIzaSyB3dFZ2asXmz2_Aa-QDYTAo52eOCvGkl4Y
+    API_URL: https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyB3dFZ2asXmz2_Aa-QDYTAo52eOCvGkl4Y&address=
+  SCRATCHER:
+    MAX_COUNT: 100
+    START_COUNT: 0
+    STEP: 20
+    GET_URL: https://jobs.dou.ua/companies/?name=
+    API_URL: https://jobs.dou.ua/companies/xhr-load/?name=
+    HEADERS:
+      Referer: https://jobs.dou.ua/companies/?name=
+      Host: jobs.dou.ua
+      Origin: https://jobs.dou.ua
+    CITIES: kiev,
 
 # Running tests
 test:
@@ -27,6 +42,7 @@ test:
   ~compose: development
   # Disable logging for tests
   LOG_LEVEL: off
+  DB: it-maps-db-test
 
 # Production environment.
 production:
@@ -34,3 +50,4 @@ production:
   ~compose: base
   # Port to use
   PORT: 80
+  DB: it-maps-db
