--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "axios": "^0.17.1",
     "bristol": "^0.3.3",
     "fejl": "^1.0.2",
+    "form-data": "^2.3.2",
+    "jsdom": "^11.11.0",
     "keyblade": "^0.3.2",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
@@ -31,7 +33,9 @@
     "koa-respond": "^1.0.1",
     "koa-router": "^7.3.0",
     "lodash": "^4.17.4",
+    "mongoose": "^5.1.5",
     "palin": "^2.2.0",
+    "prompt-confirm": "^2.0.4",
     "yenv": "^1.0.6"
   },
   "devDependencies": {
