--- a/env.yaml
+++ b/env.yaml
@@ -30,6 +30,7 @@ development:
     STEP: 20
     GET_URL: https://jobs.dou.ua/companies/?name=
     API_URL: https://jobs.dou.ua/companies/xhr-load/?name=
+    LOCATION_PATH: offices
     HEADERS:
       Referer: https://jobs.dou.ua/companies/?name=
       Host: jobs.dou.ua
