commiting to repo

--- a/env.yaml
+++ b/env.yaml
@@ -35,7 +35,7 @@ development:
       Referer: https://jobs.dou.ua/companies/?name=
       Host: jobs.dou.ua
       Origin: https://jobs.dou.ua
-    CITIES: kiev,
+    CITIES: kiev,lvov
 
 # Running tests
 test:
